[tool.poetry]
name = "lineagex"
version = "0.0.1"
description = "A column lineage tool"
authors = ["zshandy <zshandy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
sqlglot = "^12.3.0"
psycopg2 = "^2.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
